# Ocaml-PFDS

./: LICENSE  PFDS.opam  dune-project
lib/: bankers.ml  batched.ml  binomial.ml  deque.ml  dune  queue.ml  realtime.ml  redblack.ml  splay.ml  stack.ml  streams.ml  tree.ml
test/: dune  test_PFDS.ml
