(lang dune 3.21)

(name PFDS)

(generate_opam_files true)

(source
 (github tarazonaa/Ocaml-PFDS))

(authors "Andrés Tarazona <author@example.com>")

(license MIT)

(package
 (name PFDS)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
